app/main/default/objects/APTaskTemplate__c/fields/Action_Plan__c.field-meta.xml
<CustomObject>
    <fields>
        <fullName>Action_Plan__c</fullName>
        <label>Action Plan</label>
        <referenceTo>ActionPlan__c</referenceTo>
        <relationshipName>R00NR0000000VccFMAS</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
</CustomObject>