app/main/default/objects/APTaskTemplate__c/fields/ActivityDate__c.field-meta.xml
<CustomObject>
    <fields>
        <fullName>ActivityDate__c</fullName>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
</CustomObject>