app/main/default/objects/APTaskTemplate__c/fields/APTaskTemplate__c.field-meta.xml
<CustomObject>
    <fields>
        <fullName>APTaskTemplate__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Task Dependency</label>
        <referenceTo>APTaskTemplate__c</referenceTo>
        <relationshipLabel>AP Tasks</relationshipLabel>
        <relationshipName>R00NR0000000VcWbMAK</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>