app/main/default/objects/APTaskTemplate__c/fields/DaysFromStart__c.field-meta.xml
<CustomObject>
    <fields>
        <fullName>DaysFromStart__c</fullName>
        <label>Days After</label>
        <precision>3</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
</CustomObject>