app/main/default/objects/APTaskTemplate__c/fields/Reminder__c.field-meta.xml
<CustomObject>
    <fields>
        <fullName>Reminder__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Reminder</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>