app/main/default/objects/APTaskTemplate__c/fields/SendEmail__c.field-meta.xml
<CustomObject>
    <fields>
        <fullName>SendEmail__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Send Email Notification of Task creation.</description>
        <label>Send Email</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>