app/main/default/objects/APTaskTemplate__c/fields/Subject__c.field-meta.xml
<CustomObject>
    <fields>
        <fullName>Subject__c</fullName>
        <label>Subject</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
</CustomObject>