app/main/default/objects/APTaskTemplate__c/fields/taskIndex__c.field-meta.xml
<CustomObject>
    <fields>
        <fullName>taskIndex__c</fullName>
        <label>taskIndex</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
</CustomObject>