app/main/default/objects/APTaskTemplate__c/fields/User__c.field-meta.xml
<CustomObject>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assigned To</label>
        <referenceTo>User</referenceTo>
        <relationshipName>R00NR0000000Vd7NMAS</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>